--- a/index.css
+++ b/index.css
@@ -1,4 +1,98 @@
-html, body {
-    margin: 0;
-    padding: 0;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+body {
+  line-height: 1.8;
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: clamp(0.875rem, 0.7667rem + 0.4815vw, 1.2rem);
+  text-align: center;
+  color: #4e4e4e;
+}
+
+.conversion-section {
+  background-image: linear-gradient(246.26deg, #585dfe 0%, #fb3796 100%);
+  color: white;
+  padding: 3rem;
+}
+
+h1,
+#number-input {
+  font-weight: 800;
+}
+
+h1 {
+  font-size: clamp(1.375rem, 1.2333rem + 0.6296vw, 1.8rem);
+  padding: 1rem;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: inherit;
+  color: #1a1921;
+}
+
+p {
+  display: inline-block;
+}
+
+#number-input {
+  background: transparent;
+  font-family: inherit;
+  font-size: 6rem;
+  border: none;
+  color: white;
+  text-align: center;
+  width: 100%;
+}
+
+#number-input:focus {
+  outline: none;
+  background-color: hsla(238, 99%, 89%, 0.4);
+  max-width: 400px;
+  border-radius: 5px;
+}
+
+.wrapper {
+  padding: 2rem;
+}
+
+.flow > * {
+  margin-bottom: 2em;
+}
+
+@media all and (max-width: 460px) {
+  p {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .bar {
+    display: none;
+  }
 }
